HREPTWO-2811: Documents column should use the complete height of the screen before showing pagination https://issues.onehippo.com/browse/HREPTWO-2811
ListDataTable.java: When model is set, check which Items should be rendered and add them to dirty queue
AbstractlistingPlugin.java: removed redraw statement on selectionChanged event to allow more fine-grained ajax-updates
DocumentListing.java: removed dragdrop behavior
dragdropmanager.js: added faster path for registering DD-behavior on elements. Not in use yet.
layoutmanager.js: added workaround for HREPTWO-3035, make sure resize handles are wider than scrollbars
tables.js: added IE-fix, if scrolling needed, don't add it to the tbody but to the YUI-unit
screen.css: removed IE scrollbar assignment
cms-folder-views.xml: Removed paging by setting the page.size to 500


svn path=/hippo-ecm/trunk/; revision=19434

--- a/repository/package/skin/src/main/webapp/screen.css
+++ b/repository/package/skin/src/main/webapp/screen.css
@@ -1181,9 +1181,8 @@ table.hippo-defaultcontent td {
   position: absolute;
 }
 
+/* Apply scrollbars to modern browsers */
 table.hippo-list-documents > tbody {
   overflow-x: hidden;
   overflow-y: auto;
-  -ms-overflow-x: hidden;
-  -ms-overflow-y: auto;
 }
